# tradeflow-os

./: .env.example  .env.production.example  .gitignore  AWS_DEPLOYMENT_GUIDE.md  AWS_QUICK_REFERENCE.md  CI_CD_GUIDE.md  CI_CD_VERIFICATION.md  CLEAN_MIGRATION_TEST.md  DAILY_SUMMARY_2026-02-20.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FLOW.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TEST.md  DEPLOYMENT_TEST_GUIDE.md  EC2_DEPLOYMENT_QUICK_START.sh  FRONTEND_BUILD_COMPLETE.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_STABILITY_FIX.md  FRONTEND_TESTING_GUIDE.md  GITHUB_ACTIONS_SETUP.md  GITHUB_SECRETS_SETUP.md  GLOBAL_EMAIL_FIX.md  IMPLEMENTATION_SUMMARY.md  LOGIN_FIX_SUMMARY.md  M0_VERIFICATION.md  M1_COMPLETION_REPORT.md  M1_IMPLEMENTATION_SUMMARY.md  M1_QUICK_START.md  M2_COMPLETION_REPORT.md  M4_COMPLETION_STATUS.md  M4_FINAL_POLISH_SUMMARY.md  M4_IMPLEMENTATION_SUMMARY.md  M4_MANUAL_TESTING_GUIDE.md  M4_PHASE3_COMPLETION.md  M4_PHASE4_COMPLETION.md  M4_QUICK_START.md  M4_TESTING_GUIDE.md  MANUAL-TESTING-GUIDE.md  MANUAL_TESTING.md  MANUAL_TESTING_CHECKLIST.md  (+27 more)
backend/: Dockerfile  M3_PROCUREMENT.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_multitenancy.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_deal_models.py  (+4 more)
backend/app/: config.py  database.py  deps.py  main.py
backend/tests/: __init__.py  conftest.py  test_ai_extraction.py  test_api.py  test_auth.py  test_customer.py  test_customer_po.py  test_document_parsing.py  test_document_service.py  test_procurement.py  test_quote.py  test_services.py  test_storage_service.py
(+177 files in other folders)
